--- a/snake/Makefile
+++ b/snake/Makefile
@@ -5,6 +5,6 @@ CC = gcc
 # Banderas
 CFLAGS = -Wall -std=c11 -Ilib `allegro-config --cflags --libs`
 
-snake: lib/dinamic_queue.c lib/dinamic_queue.h lib/recursos.c lib/recursos.h snake.c lib/config.h
-	$(CC) -o snake snake.c lib/dinamic_queue.c lib/recursos.c $(CFLAGS)
+snake: lib/dinamic_queue.c lib/dinamic_queue.h lib/recursos.c lib/recursos.h snake.c lib/config.h lib/init_allegro.c lib/init_allegro.h
+	$(CC) -o snake snake.c lib/dinamic_queue.c lib/recursos.c lib/init_allegro.c $(CFLAGS)
 
